# portfolio_api

./: Procfile  demo.env  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: urls.py
blog/: admin.py  models.py  serializers.py  views.py
blog/migrations/: 0001_AddBlogModel.py  0002_alter_post_slug.py
category/: admin.py  models.py  serializers.py  views.py
category/migrations/: 0001_AddCategoryModel.py  0002_alter_category_slug.py  0003_AddDateCreatedField.py
portfolio_api/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  forms.py  managers.py  models.py  serializers.py  views.py
user/migrations/: 0001_AddCustomUserModel.py
