[tool.poetry]
name = "portfolio_api"
version = "0.1.0"
description = "API for my Portfolio"
authors = ["Hardeep Kumar <hardeepkumar1815@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = {extras = ["argon2"], version = "^4.1"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
